--- a/style/card.css
+++ b/style/card.css
@@ -27,6 +27,11 @@
   color: var(--h-03);
 }
 
+.card-header {
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
 .card-author {
   display: flex;
   align-items: center;
@@ -46,7 +51,8 @@
   height: 100%;
   border-radius: 50%;
   filter: grayscale(100%);
-}.avatar {
+}
+.avatar {
   width: 3rem;
   height: 3rem;
 }
@@ -71,6 +77,14 @@
   stroke-linecap: round;
 }
 
+.author-deets {
+  margin-left: 0.5rem;
+  line-height: 1.3;
+}
+
+.author-role {
+  font-size: .95rem;
+}
 
 .tags {
   margin-top: 1rem;
