--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,6 @@
     background: var(--bg-01);
     color: var(--bg-06);
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -29,6 +28,10 @@ body {
   width: 100%;
   min-height: 100vh;
   line-height: 1.6;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* Header */
@@ -55,9 +58,8 @@ header nav {
   gap: 1.5rem;
 }
 
-header nav a {
+header nav a, .logo a {
   color: var(--bg-06);
-  text-decoration: none;
   font-weight: 600;
 }
 
@@ -164,7 +166,6 @@ footer ul li {
 
 footer a {
   color: var(--h-05);
-  text-decoration: none;
 }
 
 footer a:hover {
